--- a/config/euroc_mav/estimator_config.yaml
+++ b/config/euroc_mav/estimator_config.yaml
@@ -22,7 +22,7 @@ dt_slam_delay: 1 # delay before initializing (helps with stability from bad init
 gravity_mag: 9.81 # magnitude of gravity in this location
 
 feat_rep_msckf: "GLOBAL_3D"
-feat_rep_slam: "ANCHORED_MSCKF_INVERSE_DEPTH"
+feat_rep_slam:  "ANCHORED_MSCKF_INVERSE_DEPTH"  #"ANCHORED_MSCKF_INVERSE_DEPTH"
 feat_rep_aruco: "ANCHORED_MSCKF_INVERSE_DEPTH"
 
 # zero velocity update parameters we can use
